# nordlys

./: .gitignore  AGENTS.md  AUDIT_REPORT.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MIGRATION_PLAN.md  README.md  SECURITY.md  main.py  pyproject.toml
adaptive_router_core/: CMakeLists.txt  CMakePresets.json  README.md  conanfile.py  pyproject.toml
adaptive_router_core/bindings/: CMakeLists.txt
adaptive_router_core/bindings/c/: CMakeLists.txt  adaptive.h  adaptive_c.cpp
adaptive_router_core/bindings/c/include/: adaptive.h
adaptive_router_core/bindings/c/src/: adaptive_c.cpp
adaptive_router_core/bindings/c/tests/: CMakeLists.txt  test_c_ffi.cpp
adaptive_router_core/bindings/python/: CMakeLists.txt  README.md  adaptive_core_py.cpp  pyproject.toml
adaptive_router_core/bindings/python/src/: adaptive_core_py.cpp
adaptive_router_core/bindings/python/tests/: conftest.py  test_batch.py  test_router.py
adaptive_router_core/core/: CMakeLists.txt
adaptive_router_core/core/include/adaptive_core/: profile.hpp  router.hpp
adaptive_router_core/core/src/: profile.cpp  router.cpp
adaptive_router_core/core/src/cuda/: CMakeLists.txt  cluster_cuda.cu
adaptive_router_core/core/tests/: CMakeLists.txt  test_router.cpp
adaptive_router_core/include/: cluster.hpp  cluster_backend.hpp  profile.hpp  router.hpp  scorer.hpp  types.hpp
adaptive_router_core/src/: cluster.cpp  cluster_backend.cpp  profile.cpp  router.cpp  scorer.cpp
adaptive_router_core/src/cuda/: cluster_cuda.cu  cluster_cuda.hpp
adaptive_router_core/tests/: CMakeLists.txt  test_c_ffi.cpp  test_cluster.cpp  test_router.cpp  test_scorer.cpp
benchmarks/: .gitignore  README.md  pyproject.toml  test_nordlys.py
benchmarks/profiling/: Documentation.md
benchmarks/profiling/clustering/: profile_model.py
benchmarks/src/benchmarks/: __init__.py  cli.py
benchmarks/src/benchmarks/bindings/: __init__.py  cactus_bindings.py
benchmarks/src/benchmarks/core/: __init__.py  metrics.py  routers.py  runner.py  simulator.py
benchmarks/src/benchmarks/visualizations/: __init__.py  charts.py
benchmarks/swe-bench/profiling/: .gitignore  Documentation.md  pyproject.toml
benchmarks/swe-bench/profiling/clustering/: profile.json  profile_model.py  profile_oldone.json  swe_bench_model_analysis.ipynb
benchmarks/swe-bench/swe-bench/: README.md
benchmarks/swe-bench/swe-bench/scripts/: run_benchmark.py
benchmarks/swe-bench/swe-bench/src/: __init__.py  benchmark.py  nordlys_provider.py  run.py  s3_fetcher.py
benchmarks/swe-bench/swe-bench/submission/: README.md  metadata.yaml
benchmarks/swe_smith/: README.md  __init__.py  batch_runner.py  config.py  file_fetcher.py  profiler.py  sampler.py
benchmarks/swe_smith/scripts/: __init__.py  build_profile.py  collect_results.py  prefetch_files.py  prepare_batch.py  run_autobatch.py  sample_instances.py  submit_batch.py
nordlys/: .coveragerc  CHANGELOG.md  README.md  pyproject.toml
nordlys-core/benchmarks/: .gitignore  BOTTLENECK_ANALYSIS.md  CMakeLists.txt  PROFILING.md  README.md  bench_checkpoint_e2e.cpp  bench_cluster_backend.cpp  bench_cluster_cpu.cpp  bench_cluster_cuda.cu  bench_e2e.cpp  bench_routing_cuda.cpp  bench_routing_e2e.cpp  bench_utils.hpp
nordlys-core/benchmarks/scripts/: .gitignore  check_profiling_tools.sh  profile_all.sh  profile_callgrind.sh  profile_flamegraph.sh  profile_memory.sh  profile_perf.sh  profile_strace.sh  run_tracy.sh  tracy_ci_capture.sh
nordlys-core/clustering/tests/: CMakeLists.txt  test_cluster.cpp  test_cluster_cpu.cpp  test_cluster_cuda.cu
nordlys-core/clustering/tests/cuda/: CMakeLists.txt  test_cuda_common.cu  test_cuda_config.cu  test_cuda_distance.cu  test_cuda_memory.cu  test_cuda_reduce.cu  test_cuda_utils.cu
nordlys-core/core/: CMakeLists.txt  README.md
nordlys-core/core/include/nordlys_core/: cache.hpp  checkpoint.hpp  cluster.hpp  cluster_backend.hpp  distance_cuda.cuh  matrix.hpp  nordlys.hpp  tracy.hpp
nordlys-core/core/src/: checkpoint.cpp  cluster_backend.cpp  cluster_cuda.cu  scorer.cpp
nordlys-core/core/src/cuda/: cluster_cuda.cu
nordlys-core/core/tests/: CMakeLists.txt  test_checkpoint.cpp  test_cluster.cpp  test_cluster_threadsafety.cpp  test_matrix.cpp  test_nordlys.cpp  test_profile.cpp  test_router.cpp  test_scorer.cpp
nordlys-core/core/tests/fixtures/: fixtures_loader.hpp  invalid_checkpoint.json  valid_checkpoint_f32.json  valid_checkpoint_f64.json
nordlys-core/core/tests/integration/: CMakeLists.txt  test_checkpoint_integration.cpp  test_end_to_end_integration.cpp  test_nordlys_integration.cpp
nordlys/benchmarks/: __init__.py  bench_core.py  conftest.py
nordlys/examples/: README.md  simple_example.py
nordlys/scripts/: README.md  __init__.py  convert_profile.py  migrate_v1_to_v2.py
nordlys/src/nordlys/: __init__.py  _nordlys.py  checkpoint.py  checkpoint_types.py  dataset.py  device.py  nordlys.py  router.py  search.py  trainer.py
nordlys/src/nordlys/clustering/: __init__.py  _agglomerative.py  _cuda_minibatch.py  _gmm.py  _hdbscan.py  _kmeans.py  _spectral.py  _sweep.py  agglomerative.py  base.py  bisecting.py  gmm.py  hdbscan_clusterer.py  kmeans.py  metrics.py  minibatch.py  spectral.py  sweep.py
nordlys/src/nordlys/core/: trainer.py
nordlys/src/nordlys/embeddings/: __init__.py  base.py  sentence_transformers.py  sentence_transformers_backend.py
nordlys/src/nordlys/exceptions/: __init__.py  core.py
nordlys/src/nordlys/reduction/: __init__.py  _pca.py  _umap.py  base.py  pca.py  umap_reducer.py
nordlys/tests/: conftest.py  test_init.py  test_nordlys_basic.py
nordlys/tests/integration/: conftest.py  test_fit_transform.py  test_persistence.py  test_routing.py  test_trainer.py
nordlys/tests/unit/: conftest.py  test_checkpoint.py  test_dataset.py  test_embedding_cache.py  test_embeddings.py  test_package_init.py
nordlys/tests/unit/clustering/: test_agglomerative_clusterer.py  test_bisecting.py  test_gmm_clusterer.py  test_hdbscan.py  (+4 more)
nordlys/tests/utils/: __init__.py  fake_embedder.py
nordlys/train/: __init__.py  config.py  train.py
nordlys/train/examples/: README.md
(+201 files in other folders)
