[build-system]
requires = ["scikit-build-core>=0.10.7", "scikit-build-core-conan>=0.1.0", "nanobind>=2.9.2"]
build-backend = "scikit_build_core_conan.build"

[project]
name = "adaptive-router-core"
version = "0.1.4"
description = "C++ inference core for Adaptive Router"
authors = [{ name = "Botir Khaltaev", email = "botirkhaltaev@llmadaptive.uk" }]
requires-python = ">=3.11,<4.0"
license = "MIT"
dependencies = []

[tool.uv]
cache-keys = [
  { file = "CMakeLists.txt" },
  { glob = "src/**/*.cpp" },
  { glob = "src/**/*.cu" },
  { glob = "include/**/*.hpp" },
  { glob = "bindings/**/*.cpp" },
  { glob = "bindings/**/*.h" },
]

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"
wheel.packages = []                       # Pure extension module
cmake.build-type = "Release"
cmake.version = ">=3.24"

[tool.scikit-build.cmake.define]
CMAKE_EXPORT_COMPILE_COMMANDS = "ON"
CMAKE_CXX_STANDARD = "20"
ADAPTIVE_ENABLE_CUDA = "OFF"  # CPU-only build

[tool.scikit-build-core-conan]
build = "missing"
settings = ["compiler.cppstd=20"]
