[project]
name = "adaptive-profiling"
version = "0.1.0"
description = "Model profiling tools for Adaptive Router using SWE-bench results"
readme = "Documentation.md"
requires-python = ">=3.11"
dependencies = [
    "pygithub>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
profile-model = "clustering.profile_model:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["clustering"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
